--- a/Twitter/TextCell.xib
+++ b/Twitter/TextCell.xib
@@ -15,38 +15,38 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IvZ-mH-V0b">
-                        <rect key="frame" x="8" y="20" width="60" height="60"/>
+                        <rect key="frame" x="8" y="18" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="DVI-WJ-j6M"/>
                             <constraint firstAttribute="height" constant="60" id="VxY-JH-xBj"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Michael Moran" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2N-0A-1Uk">
-                        <rect key="frame" x="72" y="18" width="114.5" height="23.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="249" text="Michael Moran" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2N-0A-1Uk">
+                        <rect key="frame" x="72" y="18" width="115" height="25"/>
                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3sE-0s-AxC">
-                        <rect key="frame" x="193" y="21" width="29.5" height="16.5"/>
+                        <rect key="frame" x="191" y="23" width="30" height="17"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="12"/>
                         <color key="textColor" red="0.47604776069999999" green="0.43302370480000002" blue="0.48086144180000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wel-mP-QCb">
-                        <rect key="frame" x="72" y="44" width="240" height="20.5"/>
+                        <rect key="frame" x="72" y="44" width="240" height="21"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8hr" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ujJ-6d-y8O">
-                        <rect key="frame" x="294" y="21" width="18" height="16.5"/>
+                        <rect key="frame" x="294" y="21" width="18" height="17"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="12"/>
                         <color key="textColor" red="0.47604776069999999" green="0.43302370480000002" blue="0.48086144180000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lu4-4g-ntM">
-                        <rect key="frame" x="8" y="3" width="28.5" height="13.5"/>
+                        <rect key="frame" x="74" y="3" width="29" height="14"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -81,27 +81,51 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lQH-Ua-2rv">
+                        <rect key="frame" x="194" y="72" width="29" height="14"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="90D-B6-QuO">
+                        <rect key="frame" x="287" y="72" width="29" height="14"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retweet_on" translatesAutoresizingMaskIntoConstraints="NO" id="kmd-qW-xh2">
+                        <rect key="frame" x="53" y="5" width="18" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="14" id="Qfn-pJ-JIz"/>
+                            <constraint firstAttribute="width" constant="18" id="qZH-1r-L13"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="J0o-rz-Olg" firstAttribute="top" secondItem="wel-mP-QCb" secondAttribute="bottom" constant="7.5" id="0ex-v9-rjR"/>
-                    <constraint firstItem="lu4-4g-ntM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="1B9-ZO-jwU"/>
+                    <constraint firstItem="lu4-4g-ntM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="74" id="1B9-ZO-jwU"/>
+                    <constraint firstItem="J0o-rz-Olg" firstAttribute="centerY" secondItem="lQH-Ua-2rv" secondAttribute="centerY" id="4Da-tX-2CM"/>
                     <constraint firstItem="J0o-rz-Olg" firstAttribute="top" secondItem="wel-mP-QCb" secondAttribute="bottom" constant="7.5" id="6k1-IZ-ReQ"/>
                     <constraint firstItem="c5m-Py-7Sp" firstAttribute="top" relation="greaterThanOrEqual" secondItem="wel-mP-QCb" secondAttribute="bottom" constant="8" id="73o-Ny-q4A"/>
-                    <constraint firstItem="3sE-0s-AxC" firstAttribute="leading" secondItem="g2N-0A-1Uk" secondAttribute="trailing" constant="6.5" id="94F-rb-rAe"/>
+                    <constraint firstItem="3sE-0s-AxC" firstAttribute="leading" secondItem="g2N-0A-1Uk" secondAttribute="trailing" constant="5" id="94F-rb-rAe"/>
                     <constraint firstItem="veq-IZ-Uax" firstAttribute="leading" secondItem="IvZ-mH-V0b" secondAttribute="trailing" constant="8" id="9UN-Us-eHp"/>
                     <constraint firstItem="wel-mP-QCb" firstAttribute="top" secondItem="g2N-0A-1Uk" secondAttribute="bottom" constant="-2.5" id="AQr-m9-sxy"/>
                     <constraint firstItem="c5m-Py-7Sp" firstAttribute="top" secondItem="wel-mP-QCb" secondAttribute="bottom" constant="7.5" id="AyB-Wg-OSR"/>
                     <constraint firstItem="g2N-0A-1Uk" firstAttribute="leading" secondItem="IvZ-mH-V0b" secondAttribute="trailing" constant="4" id="Cra-aJ-z1M"/>
                     <constraint firstAttribute="trailing" secondItem="ujJ-6d-y8O" secondAttribute="trailing" constant="8" id="DJG-I0-NR2"/>
+                    <constraint firstItem="kmd-qW-xh2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Fc6-QW-kZM"/>
                     <constraint firstItem="g2N-0A-1Uk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="Gk4-lc-RHq"/>
+                    <constraint firstItem="c5m-Py-7Sp" firstAttribute="centerY" secondItem="90D-B6-QuO" secondAttribute="centerY" id="MBa-7T-Oh0"/>
                     <constraint firstItem="lu4-4g-ntM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="MVB-KS-TLd"/>
+                    <constraint firstItem="kmd-qW-xh2" firstAttribute="trailing" secondItem="IvZ-mH-V0b" secondAttribute="trailing" constant="3" id="PaX-q2-XQv"/>
                     <constraint firstItem="IvZ-mH-V0b" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Q5U-WH-ru4"/>
                     <constraint firstItem="J0o-rz-Olg" firstAttribute="leading" secondItem="veq-IZ-Uax" secondAttribute="trailing" constant="79" id="Rws-2G-2Ql"/>
+                    <constraint firstItem="90D-B6-QuO" firstAttribute="leading" secondItem="c5m-Py-7Sp" secondAttribute="trailing" constant="1" id="U80-Sq-te8"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="veq-IZ-Uax" secondAttribute="bottom" constant="5" id="UkH-qX-La1"/>
                     <constraint firstAttribute="bottom" secondItem="c5m-Py-7Sp" secondAttribute="bottom" constant="7" id="VI0-T4-Imq"/>
-                    <constraint firstItem="IvZ-mH-V0b" firstAttribute="top" secondItem="lu4-4g-ntM" secondAttribute="bottom" constant="3.5" id="VW9-fu-rE8"/>
+                    <constraint firstItem="IvZ-mH-V0b" firstAttribute="top" secondItem="lu4-4g-ntM" secondAttribute="bottom" constant="2" id="VW9-fu-rE8"/>
                     <constraint firstAttribute="bottomMargin" secondItem="wel-mP-QCb" secondAttribute="bottom" constant="33" id="WyV-b7-C4i"/>
-                    <constraint firstItem="wel-mP-QCb" firstAttribute="top" secondItem="g2N-0A-1Uk" secondAttribute="bottom" constant="2.5" id="Zdc-zL-W2U"/>
+                    <constraint firstItem="wel-mP-QCb" firstAttribute="top" secondItem="g2N-0A-1Uk" secondAttribute="bottom" constant="1" id="Zdc-zL-W2U"/>
                     <constraint firstAttribute="bottom" secondItem="veq-IZ-Uax" secondAttribute="bottom" constant="7" id="cLH-y8-gqa"/>
                     <constraint firstItem="wel-mP-QCb" firstAttribute="top" secondItem="3sE-0s-AxC" secondAttribute="bottom" constant="7.5" id="cvL-zd-Uxu"/>
                     <constraint firstItem="wel-mP-QCb" firstAttribute="leading" secondItem="IvZ-mH-V0b" secondAttribute="trailing" constant="4" id="dXq-hp-aUk"/>
@@ -110,13 +134,14 @@
                     <constraint firstItem="veq-IZ-Uax" firstAttribute="top" secondItem="wel-mP-QCb" secondAttribute="bottom" constant="7.5" id="giV-lF-L0d"/>
                     <constraint firstItem="c5m-Py-7Sp" firstAttribute="top" secondItem="wel-mP-QCb" secondAttribute="bottom" constant="7.5" id="hAF-ho-HgG"/>
                     <constraint firstItem="ujJ-6d-y8O" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="i9u-km-OnL"/>
-                    <constraint firstItem="3sE-0s-AxC" firstAttribute="centerY" secondItem="g2N-0A-1Uk" secondAttribute="centerY" id="iXY-eW-fIX"/>
+                    <constraint firstItem="3sE-0s-AxC" firstAttribute="centerY" secondItem="g2N-0A-1Uk" secondAttribute="centerY" constant="1" id="iXY-eW-fIX"/>
                     <constraint firstItem="wel-mP-QCb" firstAttribute="top" secondItem="3sE-0s-AxC" secondAttribute="bottom" id="kQB-AO-wBK"/>
                     <constraint firstAttribute="bottom" secondItem="J0o-rz-Olg" secondAttribute="bottom" constant="7" id="n3G-td-niC"/>
                     <constraint firstItem="wel-mP-QCb" firstAttribute="top" secondItem="g2N-0A-1Uk" secondAttribute="bottom" id="nOW-Ew-2Y3"/>
                     <constraint firstItem="wel-mP-QCb" firstAttribute="top" secondItem="g2N-0A-1Uk" secondAttribute="bottom" constant="3.5" id="qfr-4n-4RH"/>
                     <constraint firstItem="veq-IZ-Uax" firstAttribute="top" secondItem="wel-mP-QCb" secondAttribute="bottom" constant="7.5" id="u8S-S3-JzX"/>
                     <constraint firstItem="wel-mP-QCb" firstAttribute="top" secondItem="g2N-0A-1Uk" secondAttribute="bottom" constant="3.5" id="xTk-BI-hbu"/>
+                    <constraint firstItem="lQH-Ua-2rv" firstAttribute="leading" secondItem="J0o-rz-Olg" secondAttribute="trailing" constant="1" id="yia-0f-2c6"/>
                     <constraint firstItem="wel-mP-QCb" firstAttribute="top" secondItem="g2N-0A-1Uk" secondAttribute="bottom" constant="3.5" id="yos-mO-N8w"/>
                 </constraints>
                 <variation key="default">
@@ -139,8 +164,11 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="favoriteButton" destination="c5m-Py-7Sp" id="Ipd-zp-eKT"/>
+                <outlet property="fcount" destination="90D-B6-QuO" id="ae5-Ck-U1Q"/>
                 <outlet property="nameLabel" destination="g2N-0A-1Uk" id="zoO-Ui-mXp"/>
+                <outlet property="rcount" destination="lQH-Ua-2rv" id="bgk-ao-c8W"/>
                 <outlet property="replyButton" destination="veq-IZ-Uax" id="NbL-0E-yFs"/>
+                <outlet property="retweet" destination="kmd-qW-xh2" id="SdD-7k-DX2"/>
                 <outlet property="retweetButton" destination="J0o-rz-Olg" id="1OY-tE-BNx"/>
                 <outlet property="retweetedLabel" destination="lu4-4g-ntM" id="7ns-gZ-s7u"/>
                 <outlet property="screenName" destination="3sE-0s-AxC" id="0WV-5j-SPn"/>
@@ -155,5 +183,6 @@
         <image name="favorite" width="72" height="72"/>
         <image name="reply" width="70" height="58"/>
         <image name="retweet" width="40" height="32"/>
+        <image name="retweet_on" width="40" height="32"/>
     </resources>
 </document>
